docs/kubernetes/study-case/configs/laravel-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: laravel-svc
  namespace: production
  labels:
    app: laravel
spec:
  selector:
    app: laravel
  ports:
  - name: http
    port: 80
    targetPort: 8000     # artisan serve listens on 8000
